--- a/Ejercicios/Tarea01/style.css
+++ b/Ejercicios/Tarea01/style.css
@@ -1,23 +1,28 @@
-nav{
-    list-style: none;
-    margin:0;
-    padding:0;
-    text-align: center;
-}
-li{
-    display: inline;
-    margin-left: 30px;
-}
-@media(max-width:600px){
-    nav::before{
-        content: url('https://picsum.photos/600/300');
-    float: left;
+@media (min-width:700px){
+    nav{
+        list-style: none;
+        margin:0;
+        padding:0;
+        text-align: center;
     }
     li{
-        
+        display: inline;
+        margin-left: 30px;
     }
+    nav::before{
+        content: url('https://picsum.photos/1900/300');
+        float: left;
+    }
+    
 }
-nav::before{
-    content: url('https://picsum.photos/1900/300');
-    float: left;
+
+@media (max-width:700px){
+    nav::before{
+        content: url('https://picsum.photos/600/300');
+        float: left;
+    }
+    li{
+        display: block;
+        margin-top: 10px;
+    }
 }
