--- a/Ejercicios/Tarea05/estilo_ejercicio_05.css
+++ b/Ejercicios/Tarea05/estilo_ejercicio_05.css
@@ -1,39 +1,99 @@
+body{
+    font-family: 'Amatic SC', cursive;
+}
+.modulo:nth-child(2n){
+    background-color: gainsboro;
+}
+.arti-titulo{
+    display: block;
+    text-align: left;
+    font-size: 30px;
+}
+.logo{
+    color:black;
+    position: 0 0;
+    font-weight: bold;
+}
+h2{
+    text-align: center;
+}
+
+a{
+    text-decoration: none;
+    color:green;
+}
 @media (min-width:700px){
-    div{
+
+    .modulo{
         display: inline-block;
-        width:30%;
+        width: 300px;
+        font-size: 30px;
+        float:left;
         
     }
-    .modulo:nth-child(2n){
-        background-color: gray;
+    nav{
+        float:right;
+        background-image:url('cthulhu.svg');
+        background-position: 50px 25px;
+        background-size: 60px;
+        background-repeat: no-repeat;
+        height: 100px;
     }
-    .modulo:nth-child(odd){
-        background-color: black;
+    header{
+        background-color: gainsboro;
+        height: 100px;
+        font-size: 30px;
     }
-    .arti-titulo{
-        display: block;
-        text-align: left;
-    }
-    .logo{
-        position: 0 0;
-    }
-    li{
-        display:inline-block;
-        margin: 3px;
-        
-    }
+
+
     .activo{
         float: left;
         width: 50px;
         height: 50px;
-        content:url('cthulhu.svg');
+
     }
     article{
         background-color: white;
         display: inline-block;
+        margin-left:60px;
+        margin-right:700px;
+    }
+    li{
+        display:inline-block;
+        margin: 10px;
+        
     }
 }
 
 @media (max-width:700px){
 
+    .modulo{
+        display: inline-block;
+        width: 150px;
+        font-size: 30px;
+        float:left;
+        
+    }
+    nav{
+        background-image:url('cthulhu.svg');
+        background-position: 500px 25px;
+        background-size: 60px;
+        background-repeat: no-repeat;
+        height: 100px;
+    }
+    header{
+        background-color: gainsboro;
+        height: 300px;
+        font-size: 30px;
+    }
+    article{
+        background-color: white;
+        display: inline-block;
+        margin-left:40px;
+        margin-right:100px;
+    }
+    li{
+        margin: 10px;
+        list-style: none;
+    }
 }
