--- a/Ejercicios/Tarea13/Tarea_12.css
+++ b/Ejercicios/Tarea13/Tarea_12.css
@@ -19,7 +19,9 @@ container{
 button{
     border: 3px solid darkgrey;
 }
-
+boton{
+    display: inline-block;
+}
 
 box{
     background-color: #1e0;
@@ -28,6 +30,30 @@ box{
     border-radius: 10px; 
     margin-right: 10px;
     
+}
+header{
+    display: block;
+    height: 100px;
+    width: 1000px;
+
+}
+.saltar{
+    background: url('cthulhu.svg');
+    background-size: 100% 100%;
+    width: 100px;
+    height: 90px;
+}
+.brincar{
+    background: url('cthulhu.svg');
+    background-size: 100% 100%;
+    width: 100px;
+    height: 80px;
+}
+.parar{
+    background: url('cthulhu.svg');
+    background-size: 100% 100%;
+    width: 100px;
+    height: 70px;
 }
 
 .evoluciona{
