--- a/NodeJS/MongoFallero/public/style/style.css
+++ b/NodeJS/MongoFallero/public/style/style.css
@@ -1,7 +1,29 @@
 body {
   background-color: pink; }
 
-.resultados img {
-  height: 30%; }
+.resultados {
+  border-radius: 5px;
+  border: 2px solid black;
+  background-color: orange;
+  display: grid,flexbox;
+  width: 1400px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin: 0 auto;
+  padding: 20px;
+  justify-content: center; }
+
+.fallas {
+  box-shadow: 3px 3px 5px yellow;
+  border: 2px solid black;
+  margin: 5px;
+  opacity: 0.7; }
+  .fallas img {
+    height: 90%;
+    width: 100%; }
+
+.fallas:hover {
+  opacity: 1;
+  font-size: large; }
 
 /*# sourceMappingURL=style.css.map */
