--- a/NodeJS/MongoFallero/public/style/style.scss
+++ b/NodeJS/MongoFallero/public/style/style.scss
@@ -1,9 +1,35 @@
 body{
     background-color: pink;
+    
+
 }
 
 .resultados{
+        border-radius: 5px;
+        border: 2px solid black;
+        background-color: orange;
+        display: grid,flexbox;
+        width: 1400px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        margin: 0 auto;
+        padding: 20px;
+        justify-content: center;
+        
+}
+
+.fallas{
+    box-shadow: 3px 3px 5px yellow;
+    border: 2px solid black;
+    margin: 5px;
     img{
-        height: 30%;
+        height: 90%;
+        width: 100%;
     }
+    opacity: 0.7;
+}
+
+.fallas:hover{
+    opacity: 1;
+    font-size: large;
 }
