--- a/NodeJS/MongoFallero/public/style/style.scss
+++ b/NodeJS/MongoFallero/public/style/style.scss
@@ -31,11 +31,11 @@ body{
     text-align: center;
 }
 
-.fallas:hover{
+/*.fallas:hover{
     opacity: 1;
     font-size: large;
     //font-weight: 500;
-}
+}*/
 
 .filtro{
     input{
