--- a/NodeJS/MongoFallero/public/style/style.scss
+++ b/NodeJS/MongoFallero/public/style/style.scss
@@ -9,7 +9,7 @@ body{
         border: 2px solid black;
         background-color: orange;
         display: grid,flexbox;
-        width: 1400px;
+        width: 1200px;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         margin: 0 auto;
@@ -29,13 +29,33 @@ body{
     }
     opacity: 0.7;
     text-align: center;
+    form{
+        direction:rtl;
+        unicode-bidi: bidi-override;
+    }
+    input[type="radio"]{
+        display: none;
+    }
+    label{
+        color:grey;
+        font-size: 25px;
+    }
+    
+    label:hover{
+        color:red;
+    }
+    
+    label:hover ~ label{
+        color:red;
+    }
+    input[type = "radio"]:checked ~ label{color:red;}
 }
 
-/*.fallas:hover{
+.fallas:hover{
     opacity: 1;
     font-size: large;
     //font-weight: 500;
-}*/
+}
 
 .filtro{
     input{
