--- a/NodeJS/MongoFallero/public/style/style.scss
+++ b/NodeJS/MongoFallero/public/style/style.scss
@@ -93,6 +93,7 @@ img#menu{
         margin: 0 auto;
         padding: 20px;
         justify-content: center;
+        margin-top: 10px;
         
 }
 
