--- a/NodeJS/MongoFallero/public/style/style.css
+++ b/NodeJS/MongoFallero/public/style/style.css
@@ -57,7 +57,8 @@ img#menu {
   grid-template-columns: 1fr;
   margin: 0 auto;
   padding: 20px;
-  justify-content: center; }
+  justify-content: center;
+  margin-top: 10px; }
 
 .fallas {
   background-color: #f0bbc8;
